BroadleafCommerce/MicroPM#3559 - Add more Java 17 compatibility options